test/good/tuples/default02.px

print default(Rat*[{Char}]*(Bool?*String))
