test/bad/functions/void03.px

func f([{Bool*Void}?] x) def
    return
